<resources>
    <string name="app_name">MAPP</string>

    <!-- Text Views -->
    <string name="daspos">DASPOS</string>
    <string name="loginText">Log In</string>
    <string name="mainScreenText">DASPOS LAS-10</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="myText">Password</string>
    <string name="filterText">Filter Status</string>
    <string name="gasText">Gas Status</string>
    <string name="channelOverviewText">Channel Overview</string>
    <string name="channelSetupText">Channel Setup</string>

    <string name="filter">Filter</string>
    <string name="gas">Gas</string>
    <string name="currentValueText">Current</string>

    <string name="filterChannel">Channel</string>
    <string name="filterStatus">Status</string>
    <string name="filterLevel">Level</string>
    <string name="filterHigh">High</string>
    <string name="filterHighValue"></string>

    <string name="gasChannel">Channel</string>
    <string name="gasStatus">Status</string>
    <string name="gasLevel">Level</string>
    <string name="gasHigh">High</string>
    <string name="gasHighValue"></string>

    <!-- Contact information -->
    
    <string name="contact">Contact</string>
    <string name="contact_phone">Phone:</string>
    <string name="contact_phone_no">+45 2815 4150</string>
    <string name="contact_comp_name">DASPOS A/S</string>
    <string name="contact_comp_adr_road">Gl. Klausdalsbrovej 493&#8211;495</string>
    <string name="contact_comp_city">2730 Herlev</string>
    <string name="contact_comp_country">Denmark</string>
    <string name="contact_email_service">Service:</string>
    <string name="contact_email_service_adr">service@daspos.com</string>
    <string name="contact_email_admin">Administration:</string>
    <string name="contact_email_admin_adr">admin@daspos.com</string>
    

    <!-- Inputs -->

    <string name="usernameInput"></string>
    <string name="inputFilterHigh"></string>
    <string name="inputFilterClean"></string>
    <string name="inputGasAlarm"></string>

    <!-- Buttons -->

    <string name="signInButton">Sign In</string>
    <string name="recoverPassButton">Recover Password</string>
    <string name="systemOverviewButton">System Overview</string>
    <string name="listOfAccountsButton">List of Accounts</string>
    <string name="contactButton">Contact Support</string>
    <string name="signOutButton">Sign Out</string>
    <string name="setupButton">Setup</string>
    <string name="detector1">Detector 1</string>
    <string name="detector2">Detector 2</string>
    <string name="detector3">Detector 3</string>
    <string name="saveSetup">Save</string>
    <string name="cancelSetup">Cancel</string>




</resources>
