<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/filter"
        android:id="@+id/textView7"
        android:layout_marginStart="35dp"
        android:layout_marginTop="111dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/inputFilterHigh"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/channelSetupText" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/filterHighValue"
        android:text="@string/filterHighValue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:layout_alignBottom="@+id/channelFilterHigh"
        android:layout_toEndOf="@+id/cancelSetup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/filterHigh"
        android:id="@+id/channelFilterHigh"
        android:layout_alignBottom="@+id/inputFilterHigh"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gas"
        android:id="@+id/channelSetupGas"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/channelGasHigh"
        android:layout_below="@+id/channelFilterHigh" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/inputGasAlarm"
        android:text="@string/inputGasAlarm"
        android:layout_below="@+id/channelSetupGas"
        android:layout_alignStart="@+id/inputFilterHigh" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/gasHighValue"
        android:text="@string/gasHighValue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:layout_alignBottom="@+id/inputGasAlarm"
        android:layout_alignStart="@+id/filterHighValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gasHigh"
        android:id="@+id/channelGasHigh"
        android:layout_alignBottom="@+id/inputGasAlarm"
        android:layout_alignStart="@+id/channelFilterHigh" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveSetup"
        android:id="@+id/saveSetup"
        android:layout_marginBottom="51dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/inputGasAlarm" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelSetup"
        android:id="@+id/cancelSetup"
        android:layout_alignTop="@+id/saveSetup"
        android:layout_toEndOf="@+id/inputGasAlarm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/channelSetupText"
        android:id="@+id/channelSetupText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/currentValueText"
        android:id="@+id/currentValueText"
        android:layout_alignBottom="@+id/filterHighValue"
        android:layout_toStartOf="@+id/filterHighValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/currentValueText"
        android:id="@+id/currentValueText2"
        android:layout_alignBottom="@+id/gasHighValue"
        android:layout_toStartOf="@+id/gasHighValue" />

</RelativeLayout>