<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainScreenText"
        android:id="@+id/mainScreenText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systemOverviewButton"
        android:id="@+id/systemOverviewButton"
        android:layout_marginTop="107dp"
        android:layout_below="@+id/mainScreenText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listOfAccountsButton"
        android:id="@+id/listOfAccountsButton"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/systemOverviewButton"
        android:layout_alignStart="@+id/systemOverviewButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactButton"
        android:id="@+id/contactButton"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/listOfAccountsButton"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signOutButton"
        android:id="@+id/singOutButton"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>