<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setupButton"
        android:id="@+id/setupButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/filterText"
        android:id="@+id/filterText"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gasText"
        android:id="@+id/gasText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/filterText" />

    <TableLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/filterText"
        android:layout_alignStart="@+id/filterText"
        android:layout_above="@+id/gasText"
        android:id="@+id/tableLayout2">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Channel"
                android:id="@+id/textFilterChannel"
                android:layout_column="1"
                android:layout_marginRight="20dp"

                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Status"
                android:id="@+id/textFilterStatus"
                android:layout_column="2"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Level"
                android:id="@+id/textFilterLevel"
                android:layout_column="3"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="High"
                android:id="@+id/textFilterHigh"
                android:layout_column="4"
                android:textStyle="bold"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView1"
                android:layout_column="1"
                />

            <ListView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView2"
                android:layout_column="2" />

            <ListView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView3"
                android:layout_column="3" />
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listView4"
                android:layout_column="4" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/gasText"
        android:layout_alignStart="@+id/gasText"
        android:layout_above="@+id/setupButton"
        android:id="@+id/tableLayout"
        android:layout_alignParentStart="false"
        android:layout_alignEnd="@+id/tableLayout2">

        TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Channel"
                android:id="@+id/textVGasChannel"
                android:layout_column="1"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Status"
                android:id="@+id/textGasStatus"
                android:layout_column="2"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Level"
                android:id="@+id/textGasLevel"
                android:layout_column="3"
                android:layout_marginRight="25dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="High"
                android:id="@+id/textGasHigh"
                android:layout_column="4"
                android:textStyle="bold"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:layout_column="1" />

            <ListView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView5"
                android:layout_column="2" />

            <ListView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView6"
                android:layout_column="3" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listView7"
                android:layout_column="4" />
        </TableRow>
    </TableLayout>
</RelativeLayout>